# brawlstars-be

./: .gitignore  Dockerfile  Procfile  README.md  app.py  app.yaml  get_data.py  log.txt  pyproject.toml  requirements.txt  run_app.bat  run_app.sh  sample_app.py  script_log.txt  test_api.py
data/: full_maps_list.json
templates/: index.html
